2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Kito Cheng  <kito@0xlab.org>
	    Monk Chiang  <sh.chiang04@gmail.com>

	* config/nds32/nds32.c (nds32_rtx_costs): Move implementation to ...
	(nds32_address_cost): Move implementation to ...
	* config/nds32/nds32-cost.c: ... here.
	* config/nds32/nds32-protos.h (nds32_rtx_costs_impl): Declare.
	(nds32_address_cost_impl): Declare.

2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Kito Cheng  <kito@0xlab.org>
	    Monk Chiang  <sh.chiang04@gmail.com>

	* config/nds32/nds32.c
	(nds32_consecutive_registers_load_store_p): Move to ...
	(nds32_valid_multiple_load_store): Move to ...
	(nds32_valid_stack_push_pop): Move to ...
	(nds32_can_use_bclr_p): Move to ...
	(nds32_can_use_bset_p): Move to ...
	(nds32_can_use_btgl_p): Move to ...
	(nds32_can_use_bitci_p): Move to ...
	* config/nds32/nds32-predicates.c: ... here.

2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Kito Cheng  <kito@0xlab.org>
	    Monk Chiang  <sh.chiang04@gmail.com>

	* config/nds32/nds32.c
	(nds32_expand_builtin_null_ftype_reg): Move to ...
	(nds32_expand_builtin_reg_ftype_imm): Move to ...
	(nds32_expand_builtin_null_ftype_reg_imm): Move to ...
	(nds32_init_builtins): Move implementation to ...
	(nds32_expand_builtin): Move implementation to ...
	* config/nds32/nds32-intrinsic.c: ... here.
	* config/nds32/nds32-protos.h (nds32_init_builtins_impl): Declare.
	(nds32_expand_builtin_impl): Declare.

2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Kito Cheng  <kito@0xlab.org>
	    Monk Chiang  <sh.chiang04@gmail.com>

	* config/nds32/nds32.c (nds32_emit_section_head_template): Move to ...
	(nds32_emit_section_tail_template): Move to ...
	(nds32_emit_isr_jmptbl_section): Move to ...
	(nds32_emit_isr_vector_section): Move to ...
	(nds32_emit_isr_reset_conten): Move to ...
	(nds32_check_isr_attrs_conflict): Move to ...
	(nds32_construct_isr_vectors_information): Move to ...
	(nds32_asm_file_start): Move implementation to ...