@@ -1,4 +1,10 @@
 2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
+	    Ling-Hua Tseng  <uranus@tinlans.org>
+
+	* config/nds32/nds32-pipelines-auxiliary.c: Add comment to describe
+	the purpose of this file.
+
+2014-07-04  Chung-Ju Wu  <jasonwucj@gmail.com>
 	    Kito Cheng  <kito@0xlab.org>
 	    Monk Chiang  <sh.chiang04@gmail.com>
 
